updating functionality of localStorage

--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
 
-  <body class="recipe-book" data-favorite="{{ page.favorite }}">
+  <body class="recipe-book">
     <!-- Google Tag Manager (noscript) -->
     <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P8V39RV"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
