working on Dark Mode functionality. testing Apple Touch Icons. Google too?

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -107,6 +107,10 @@
     </div>
   </div>
 
+  <div class="nm-toggle">
+    <span></span>
+  </div>
+
   <!-- <div class="mobile-trigger">
     <span></span>
     <span></span>
