--- a/_sass/imports/_import.scss
+++ b/_sass/imports/_import.scss
@@ -6,9 +6,13 @@ $white: #ffffff;
 $grey: #eeeeee;
 $medgrey: #e0e0e0;
 $darkgrey: #bdbdbd;
+$medblack: #37474F;
 $black: #263238;
+$ultrablack: #151B1D;
 
-$red: #ff1744;
+$red: #FF1744;
+$aqua: #1DE9B6;
+$darkblue: #311B92;
 $yellow: #ffff00;
 $gold: #FFD54F;
 $gold_hover: #FBC02D;
