--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
   <!-- <link rel="stylesheet" href="https://use.typekit.net/qmc4dqr.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,500,900" rel="stylesheet">
   <link rel="icon" type="image/png" href="{{ "assets/imgs/fav.png" | relative_url }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "assets/imgs/apple_touch_180x180.png" | relative_url }}" />
+
   {%- feed_meta -%}
   {%- include google-analytics.html -%}
 </head>
