--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -143,7 +143,7 @@ Assign Start / End Dates / Time Variables
           </g>
           </svg>
         </span>
-        <span>Favorite this recipe</span>
+        <span class="fav-descrition">Favorite this recipe</span>
       </div>
 
       <div class="nutrition-container">
