--- a/assets/main.scss
+++ b/assets/main.scss
@@ -119,13 +119,17 @@ header.site-header {
     bottom: inherit;
   }
 }
+.searching-mobile header.site-header {
+  bottom: 275px;
+}
 .nav-button-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
 }
-.searching .nav-button-container {
+.searching .nav-button-container
+.searching-mobile .nav-button-container {
   width: 100%;
 }
 .menu-toggle,
@@ -273,7 +277,8 @@ nav.site-nav {
     padding: 20px 30px;
   }
 }
-.searching .search-modal {
+.searching .search-modal,
+.searching-mobile .search-modal {
   opacity: 1;
   pointer-events: all;
 }
@@ -303,7 +308,8 @@ nav.site-nav {
 }
 
 
-.searching .search-input {
+.searching .search-input,
+.searching-mobile .search-input {
   opacity: 1;
   pointer-events: all;
 
@@ -316,7 +322,8 @@ nav.site-nav {
     padding: 10px 30px;
   }
 }
-.searching .site-title {
+.searching .site-title,
+.searching-mobile .site-title {
   pointer-events: none;
   transform: translate3d(-100px, 0px, 0px);
   -webkit-transform: translate3d(-100px, 0px, 0px);
@@ -403,7 +410,8 @@ nav.site-nav {
     // top: 15px;
   }
 }
-.searching .search-toggle {
+.searching .search-toggle,
+.searching-mobile .search-toggle {
   // @include rotate(180deg);
   width: calc(100% - 65px);
 
@@ -420,9 +428,10 @@ nav.site-nav {
   @include rotate(45deg);
   @include transition(all 75ms ease-in-out);
 }
-.searching .close-container {
+.searching .close-container,
+.searching-mobile .close-container {
   pointer-events: all;
-  
+
   @include rotate(135deg);
 }
 .close-container span {
