kill overflow on mobile search

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,8 +28,8 @@ html {
   overflow-x: hidden;
   height: 100%;
 }
-html.searching {
-  // overflow-y: hidden;
+html.searching-mobile {
+  overflow-y: hidden;
 }
 body {
   margin: 0;
