--- a/assets/main.scss
+++ b/assets/main.scss
@@ -361,12 +361,19 @@ nav.site-nav {
     font-size: 56px;
   }
 }
+.searching .search-results.post-list,
+.searching-mobile .search-results.post-list {
+  display: flex;
+
+  @media (min-width: 720px) {
+    display: block;
+  }
+}
 .search-results.post-list {
   margin: 0 auto;
 
   @media (min-width: 720px) {
     margin: 0px auto 20px auto;
-    display: block;
   }
 }
 .search-results.post-list li {
@@ -627,7 +634,7 @@ section {
 }
 .post-list {
   padding: 0;
-  display: flex;
+  display: none;
   flex-direction: column-reverse;
   flex-wrap: wrap;
   box-sizing: border-box;
