kill mobile overflow?

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,8 +28,9 @@ html {
   overflow-x: hidden;
   height: 100%;
 }
-html.searching-mobile {
+.searching-mobile body {
   overflow-y: hidden;
+  height: 100%;
 }
 body {
   margin: 0;
