--- a/assets/main.scss
+++ b/assets/main.scss
@@ -123,7 +123,7 @@ header.site-header {
   }
 }
 .searching-mobile header.site-header {
-  bottom: 305px;
+  top: 0;
 }
 .nav-button-container {
   display: flex;
@@ -281,6 +281,7 @@ nav.site-nav {
   }
 }
 .searching-mobile .search-modal {
+  top: 75px;
   height: calc(100% - 395px);
 }
 .searching .search-modal,
