navigation and search updates. testing new logo. tweaked recipe page style and layout.

--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -11,14 +11,7 @@
 
     {%- include header.html -%}
 
-    <!-- HTML elements for search -->
-    <div class="search-modal">
-      <ul class="search-results post-list" id="results-container">
-        <h3>search by tag or keyword — eg. keto, chicken, thai, meal prep, pizza, bacon, paleo, weed... you get the idea.</h3>
-      </ul>
-    </div>
-
-
+    {%- include search-modal.html -%}
 
 
     <main class="page-content" aria-label="Content" id="recipe-head">
